--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/logo_small.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>CKZiU Elektryk</title>
 </head>
 <body>
+    <header>
+        <img src="images/logo_big.png" alt="logo" class="logo">
+        <h1>CKZiU Elektryk</h1>
+        <nav>
+            <a href="#">O nas</a>
+            <a href="#">Galeria</a>
+            <a href="#">Plan Lekcji</a>
+            <a href="#">Zastępstwa</a>
+        </nav>
+    </header>
     <script src="main.js"></script>
 </body>
 </html>
