--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <a href="#">Zastępstwa</a>
         </nav>
     </header>
+    <div class="container">
+
+    </div>
+    <footer>
+        
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
