--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <header>
         <img src="images/logo_big.png" alt="logo" class="logo">
         <h1>CKZiU Elektryk</h1>
+        <label class="toggle">
+            <input type="checkbox" class="checkbox_t">
+            <div class="switch"></div>
+        </label>
         <nav>
             <a href="#">O nas</a>
             <a href="#">Galeria</a>
