--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 </head>
 <body>
     <header>
-        <img src="images/logo_big.png" alt="logo" class="logo">
-        <h1>CKZiU Elektryk</h1>
         <label class="toggle">
             <input type="checkbox" class="checkbox_t">
             <div class="switch"></div>
         </label>
+        <h1>CKZiU Elektryk</h1>
+        <div class="menu">
+            <input type="checkbox">
+            <div class="hamburger_menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
         <nav>
             <a href="#">O nas</a>
             <a href="#">Galeria</a>
-            <a href="#">Plan Lekcji</a>
-            <a href="#">Zastępstwa</a>
+            <a href="#">Kierunki</a>
         </nav>
     </header>
     <div class="container">
