--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <nav>
-            <a href="#">O nas</a>
+            <a href="pages/o_nas.html">O nas</a>
             <a href="#">Galeria</a>
             <a href="#">Kierunki</a>
         </nav>
