--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <a href="pages/o_nas.html">O nas</a>
             <a href="#">Galeria</a>
             <a href="#">Kierunki</a>
+            <a href="#">Galeria</a>
+            <a href="#">Kierunki</a>
+            <a href="#">Galeria</a>
+            <a href="#">Kierunki</a>
         </nav>
     </header>
     <div class="container">
