--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </label>
         <h1>CKZiU Elektryk</h1>
         <div class="menu">
-            <input type="checkbox">
+            <input type="checkbox" class="check">
             <div class="hamburger_menu">
                 <span></span>
                 <span></span>
