--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
             <div class="switch"></div>
         </label>
         <h1>CKZiU Elektryk</h1>
-        <div class="menu">
-            <input type="checkbox" class="check">
-            <div class="hamburger_menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+        <input type="checkbox" class="check">
+        <div class="hamburger_menu">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-        <nav>
+        <div class="nav">
             <a href="pages/o_nas.html">O nas</a>
             <a href="#">Galeria</a>
             <a href="#">Kierunki</a>
-        </nav>
+        </div>
     </header>
     <div class="container">
 
