--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 </head>
 <body>
     <header>
-        <label class="toggle">
-            <input type="checkbox" class="checkbox_t">
-            <div class="switch"></div>
-        </label>
         <h1>CKZiU Elektryk</h1>
         <input type="checkbox" class="check">
         <div class="hamburger_menu">
@@ -26,12 +22,16 @@
             <a href="#">Galeria</a>
             <a href="#">Kierunki</a>
         </div>
+        <label class="toggle">
+            <input type="checkbox" class="checkbox_t">
+            <div class="switch"></div>
+        </label>
     </header>
     <div class="container">
 
     </div>
     <footer>
-
+        <p>Designed by <b> Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
     </footer>
     <script src="main.js"></script>
 </body>
