--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </label>
     </header>
     <div class="container">
-
+        <img src="images/logo_big.png" alt="">
+        <img src="images/logo_big.png" alt="">
     </div>
     <footer>
         <p>Designed by <b> Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
