--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="nav">
             <a href="pages/o_nas.html">O nas</a>
-            <a href="#">Galeria</a>
-            <a href="#">Kierunki</a>
+            <a href="pages/galeria.html">Galeria</a>
+            <a href="pages/kierunki.html">Kierunki</a>
         </div>
         <label class="toggle">
             <input type="checkbox" class="checkbox_t">
@@ -28,8 +28,7 @@
         </label>
     </header>
     <div class="container">
-        <img src="images/logo_big.png" alt="">
-        <img src="images/logo_big.png" alt="">
+
     </div>
     <footer>
         <p>Designed by <b> Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
