--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/logo_small.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/main.css">
-    <title>O nas</title>
+    <title>Galeria</title>
 </head>
 <body>
     <header>
-        <h1>O nas</h1>
+        <h1>Galeria</h1>
         <input type="checkbox" class="check">
         <div class="hamburger_menu">
             <span></span>
