--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <span></span>
         </div>
         <div class="nav">
+            <a href="index.html">Strona Główna</a>
             <a href="pages/o_nas.html">O nas</a>
             <a href="pages/galeria.html">Galeria</a>
             <a href="pages/kierunki.html">Kierunki</a>
