--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Galeria</h1>
+        <h1>CKZiU Elektryk</h1>
         <input type="checkbox" class="check">
         <div class="hamburger_menu">
             <span></span>
