--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span></span>
         </div>
         <div class="nav">
-            <a href="index.html">Strona Główna</a>
+            <a href="index.html" style="background-color:#2b6cb0; color: white; width: 100px;">Strona Główna</a>
             <a href="pages/o_nas.html">O nas</a>
             <a href="pages/galeria.html">Galeria</a>
             <a href="pages/kierunki.html">Kierunki</a>
