--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -19,7 +19,7 @@
         </div>
         <div class="nav">
             <a href="../index.html">Strona Główna</a>
-            <a href="../pages/o_nas.html">O nas</a>
+            <a href="../pages/o_nas.html" style="background-color: #2b6cb0; color: #ffffff;">O nas</a>
             <a href="../pages/galeria.html">Galeria</a>
             <a href="../pages/kierunki.html">Kierunki</a>
         </div>
