--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -20,7 +20,7 @@
         <div class="nav">
             <a href="../index.html">Strona Główna</a>
             <a href="../pages/o_nas.html">O nas</a>
-            <a href="../pages/galeria.html">Galeria</a>
+            <a href="../pages/galeria.html" style="background-color: #2b6cb0; color: #ffffff;">Galeria</a>
             <a href="../pages/kierunki.html">Kierunki</a>
         </div>
         <label class="toggle">
