--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="pages/kierunki.html">Kierunki</a>
         </div>
         <label class="toggle">
-            <input type="checkbox" class="checkbox_t">
+            <input type="checkbox" class="checkbox_t" id="check_t">
             <div class="switch"></div>
         </label>
     </header>
