--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="switch"></div>
         </label>
     </header>
+    <div class="loader"></div>
     <div class="container">
 
     </div>
