--- a/pages/kierunki.html
+++ b/pages/kierunki.html
@@ -21,7 +21,7 @@
             <a href="../index.html">Strona Główna</a>
             <a href="../pages/o_nas.html">O nas</a>
             <a href="../pages/galeria.html">Galeria</a>
-            <a href="../pages/kierunki.html" style="background-color: #2b6cb0; color: #ffffff;">Kierunki</a>
+            <a href="../pages/kierunki.html" class="bgactive">Kierunki</a>
         </div>
         <label class="toggle">
             <input type="checkbox" class="checkbox_t">
