--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <footer>
         <p>Designed by <b>Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
     </footer>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
