--- a/pages/kierunki.html
+++ b/pages/kierunki.html
@@ -28,12 +28,13 @@
             <div class="switch"></div>
         </label>
     </header>
+    <div class="loader"></div>
     <div class="container">
 
     </div>
     <footer>
         <p>Designed by <b> Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
     </footer>
-    <script src="../main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
