--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -31,10 +31,13 @@
     </header>
     <div class="loader"></div>
     <div class="container">
-
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
     </div>
     <footer>
-        <p>Designed by <b> Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
+        <p>Designed by <b>Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
     </footer>
     <script src="../js/main.js"></script>
 </body>
