--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -31,14 +31,20 @@
     </header>
     <div class="loader"></div>
     <div class="container">
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="container_cards">
+            <div class="block">1</div>
+            <div class="block">4</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">
+                <img src="../images/logo_small.png" alt="Logo szkoły">
+            </div>
+        </div>
     </div>
     <footer>
         <p>Designed by <b>Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
     </footer>
     <script src="../js/main.js"></script>
+    <script src="../js/o_nas.js"></script>
 </body>
 </html>
