--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -32,11 +32,11 @@
     <div class="loader"></div>
     <div class="container">
         <div class="container_cards">
-            <div class="block" id="block1">1</div>
-            <div class="block" id="block2">2</div>
-            <div class="block" id="block3">3</div>
-            <div class="block" id="block4">4</div>
-            <div class="block" id="block5">5</div>
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">4</div>
+            <div class="block">5</div>
         </div>
     </div>
     <footer>
