--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -33,10 +33,17 @@
     <div class="container">
         <div class="container_cards">
             <div class="block block1">1</div>
-            <div class="block block2">2</div>
-            <div class="block block3">3</div>
-            <div class="block block4">4</div>
-            <div class="block block5">5</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">4</div>
+            <div class="block">5</div>
+        </div>
+        <div class="content_cards">
+            <div class="content content1"></div>
+            <div class="content"></div>
+            <div class="content"></div>
+            <div class="content"></div>
+            <div class="content"></div>
         </div>
     </div>
     <footer>
