--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -33,17 +33,17 @@
     <div class="container">
         <div class="container_cards">
             <div class="block block1">1</div>
-            <div class="block">2</div>
+            <div class="block block2">2</div>
             <div class="block">3</div>
             <div class="block">4</div>
             <div class="block">5</div>
         </div>
         <div class="content_cards">
             <div class="content content1"></div>
-            <div class="content"></div>
-            <div class="content"></div>
-            <div class="content"></div>
-            <div class="content"></div>
+            <div class="content content2"></div>
+            <div class="content content3"></div>
+            <div class="content content4"></div>
+            <div class="content content5"></div>
         </div>
     </div>
     <footer>
