--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -39,11 +39,36 @@
             <div class="block block5">5</div>
         </div>
         <div class="content_cards">
-            <div class="content content1"></div>
-            <div class="content content2"></div>
-            <div class="content content3"></div>
-            <div class="content content4"></div>
-            <div class="content content5"></div>
+            <div class="content content1">
+                <div class="close">
+                    <div class="span"></div>
+                    <div class="span"></div>
+                </div>
+            </div>
+            <div class="content content2">
+                <div class="close">
+                    <div class="span"></div>
+                    <div class="span"></div>
+                </div>
+            </div>
+            <div class="content content3">
+                <div class="close">
+                    <div class="span"></div>
+                    <div class="span"></div>
+                </div>
+            </div>
+            <div class="content content4">
+                <div class="close">
+                    <div class="span"></div>
+                    <div class="span"></div>
+                </div>
+            </div>
+            <div class="content content5">
+                <div class="close">
+                    <div class="span"></div>
+                    <div class="span"></div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
