--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -40,31 +40,31 @@
         </div>
         <div class="content_cards">
             <div class="content content1">
-                <div class="close">
+                <div class="close close1">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
             <div class="content content2">
-                <div class="close">
+                <div class="close close2">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
             <div class="content content3">
-                <div class="close">
+                <div class="close close3">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
             <div class="content content4">
-                <div class="close">
+                <div class="close close4">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
             <div class="content content5">
-                <div class="close">
+                <div class="close close5">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
