--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -30,6 +30,7 @@
         </label>
     </header>
     <div class="loader"></div>
+    <div class="blur"></div>
     <div class="container">
         <div class="container_cards">
             <div class="block block1">1</div>
