--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -33,39 +33,39 @@
     <div class="blur"></div>
     <div class="container">
         <div class="container_cards">
-            <div class="block block1">1</div>
-            <div class="block block2">2</div>
-            <div class="block block3">3</div>
-            <div class="block block4">4</div>
-            <div class="block block5">5</div>
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">4</div>
+            <div class="block">5</div>
         </div>
         <div class="content_cards">
-            <div class="content content1">
-                <div class="close close1">
+            <div class="content">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content content2">
-                <div class="close close2">
+            <div class="content">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content content3">
-                <div class="close close3">
+            <div class="content">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content content4">
-                <div class="close close4">
+            <div class="content">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content content5">
-                <div class="close close5">
+            <div class="content">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
