--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -30,41 +30,40 @@
         </label>
     </header>
     <div class="loader"></div>
-    <div class="blur"></div>
     <div class="container">
         <div class="container_cards">
-            <div class="block">1</div>
-            <div class="block">2</div>
-            <div class="block">3</div>
-            <div class="block">4</div>
-            <div class="block">5</div>
+            <a class="block" href="#con1">1</a>
+            <a class="block" href="#con2">2</a>
+            <a class="block" href="#con3">3</a>
+            <a class="block" href="#con4">4</a>
+            <a class="block" href="#con5">5</a>
         </div>
         <div class="content_cards">
-            <div class="content">
+            <div class="content" id="con1">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content">
+            <div class="content" id="con2">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content">
+            <div class="content" id="con3">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content">
+            <div class="content" id="con4">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content">
+            <div class="content" id="con5">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
