--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/o_nas.css">
     <title>O nas</title>
 </head>
-<body>
+<body id="#">
     <header>
         <h1>CKZiU Elektryk</h1>
         <input type="checkbox" class="check">
@@ -40,34 +40,34 @@
         </div>
         <div class="content_cards">
             <div class="content" id="con1">
-                <div class="close">
+                <a class="close" href="#">
                     <div class="span"></div>
                     <div class="span"></div>
-                </div>
+                </a>
             </div>
             <div class="content" id="con2">
-                <div class="close">
+                <a class="close" href="#">
                     <div class="span"></div>
                     <div class="span"></div>
-                </div>
+                </a>
             </div>
             <div class="content" id="con3">
-                <div class="close">
+                <a class="close" href="#">
                     <div class="span"></div>
                     <div class="span"></div>
-                </div>
+                </a>
             </div>
             <div class="content" id="con4">
-                <div class="close">
+                <a class="close" href="#">
                     <div class="span"></div>
                     <div class="span"></div>
-                </div>
+                </a>
             </div>
             <div class="content" id="con5">
-                <div class="close">
+                <a class="close" href="#">
                     <div class="span"></div>
                     <div class="span"></div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
