--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -32,42 +32,42 @@
     <div class="loader"></div>
     <div class="container">
         <div class="container_cards">
-            <a class="block" href="#con1">1</a>
-            <a class="block" href="#con2">2</a>
-            <a class="block" href="#con3">3</a>
-            <a class="block" href="#con4">4</a>
-            <a class="block" href="#con5">5</a>
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">4</div>
+            <div class="block">5</div>
         </div>
         <div class="content_cards">
             <div class="content" id="con1">
-                <a class="close" href="#">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
-                </a>
+                </div>
             </div>
             <div class="content" id="con2">
-                <a class="close" href="#">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
-                </a>
+                </div>
             </div>
             <div class="content" id="con3">
-                <a class="close" href="#">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
-                </a>
+                </div>
             </div>
             <div class="content" id="con4">
-                <a class="close" href="#">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
-                </a>
+                </div>
             </div>
             <div class="content" id="con5">
-                <a class="close" href="#">
+                <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
