--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/o_nas.css">
     <title>O nas</title>
 </head>
-<body id="#">
+<body>
     <header>
         <h1>CKZiU Elektryk</h1>
         <input type="checkbox" class="check">
@@ -29,6 +29,7 @@
             <div class="switch"></div>
         </label>
     </header>
+    <div class="blur"></div>
     <div class="loader"></div>
     <div class="container">
         <div class="container_cards">
@@ -39,31 +40,31 @@
             <div class="block">5</div>
         </div>
         <div class="content_cards">
-            <div class="content" id="con1">
+            <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content" id="con2">
+            <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content" id="con3">
+            <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content" id="con4">
+            <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
-            <div class="content" id="con5">
+            <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
