--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -33,11 +33,15 @@
     <div class="loader"></div>
     <div class="container">
         <div class="container_cards">
-            <div class="block">1</div>
+            <div class="block">
+
+            </div>
             <div class="block">2</div>
             <div class="block">3</div>
             <div class="block">4</div>
-            <div class="block">5</div>
+            <div class="block">
+                <img src="../images/logo_small.png" alt="Logo Szkoły">
+            </div>
         </div>
         <div class="content_cards">
             <div class="content">
@@ -69,6 +73,7 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
+                <img src="../images/logo_small.png" alt="">
             </div>
         </div>
     </div>
