--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -34,11 +34,15 @@
     <div class="container">
         <div class="container_cards">
             <div class="block">
-
+                Kontakt
             </div>
-            <div class="block">2</div>
-            <div class="block">3</div>
-            <div class="block">4</div>
+            <div class="block">
+                Historia
+            </div>
+            <div class="block">
+                Tradycja, postęp
+            </div>
+            <div class="block">Elektryk w liczbach</div>
             <div class="block">
                 <img src="../images/logo_small.png" alt="Logo Szkoły">
             </div>
