--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -59,6 +59,24 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
+                <p>
+                    Historia naszej szkoły rozpoczyna się  15 października 1946 roku, 
+                    kiedy to  z polecenia Kuratorium Okręgu Szkolnego Wrocławskiego 
+                    założona została Publiczna Dokształcająca Szkoła Zawodowa. 
+                </p>
+                <p>
+                    Na stanowisko dyrektora powołany został pan Czesław Głowacki. 
+                    Początkowo szkoła nie posiadała własnego lokalu i borykała się z 
+                    brakiem sprzętu, funduszy i nauczycieli.
+                </p>
+                <p>
+                    Zajęcia odbywały się w obecnym budynku Liceum Ogólnokształcącego. 
+                    Katedrę pedagogiczną stanowili w większości nauczyciele dochodzący z 
+                    innych szkół (14 osób), natomiast zatrudnionych na stałe było tylko 3 dydaktyków.
+                </p>
+                <p>
+                    W nowej placówce, w pierwszym roku jej istnienia,  naukę podjęło aż 320 uczniów.
+                </p>
             </div>
             <div class="content">
                 <div class="close">
