--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -83,6 +83,22 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
+                <p>
+                    Centrum Kształcenia Zawodowego i Ustawicznego”Elektryk” w Nowej Soli istnieje nieprzerwanie 
+                    od 1946. Siła tradycji podtrzymywana jest przez ducha postępu i nauki. 
+                </p>
+                <p>
+                    Szkoła dysponuje trzema nowoczesnymi budynkami dydaktycznymi w pełni dostosowanymi 
+                    do potrzeb osób niepełnosprawnych. Kształcimy uczniów w porozumieniu z pracodawcami i 
+                    w oparciu o najnowsze technologie, uczniowie realizują staże i praktyki zawodowe w najlepszych 
+                    firmach w danej branży w realnych warunkach. Nasi absolwenci są doskonale przygotowani 
+                    do podjęcia studiów, pracy w firmach i innych przedsiębiorstwach, czy też prowadzenia własnej działalności. 
+                </p>
+                <p>
+                    Nasi nauczyciele stale się kształcą i stawiają na rozwój i kreatywność uczniów, 
+                    których wspierają w każdym działaniu, odbywają staże i praktyki zawodowe u wiodących pracodawców 
+                    z danych branż w Polsce i za granicą, aby w najlepszy z możliwych sposobów przekazać uczniom wiedzę z danej dziedziny.
+                </p>
             </div>
             <div class="content">
                 <div class="close">
