--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -48,12 +48,14 @@
             </div>
         </div>
         <div class="content_cards">
+            <!-- First card -->
             <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
+            <!-- Second card -->
             <div class="content">
                 <div class="close">
                     <div class="span"></div>
@@ -78,6 +80,7 @@
                     W nowej placówce, w pierwszym roku jej istnienia, naukę podjęło aż 320 uczniów.
                 </p>
             </div>
+            <!-- Third card -->
             <div class="content">
                 <div class="close">
                     <div class="span"></div>
@@ -100,12 +103,14 @@
                     z danych branż w Polsce i za granicą, aby w najlepszy z możliwych sposobów przekazać uczniom wiedzę z danej dziedziny.
                 </p>
             </div>
+            <!-- Fourth card -->
             <div class="content">
                 <div class="close">
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
             </div>
+            <!-- Fifth card -->
             <div class="content">
                 <div class="close">
                     <div class="span"></div>
