--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -42,7 +42,9 @@
             <div class="block">
                 Tradycja, postęp
             </div>
-            <div class="block">Elektryk w liczbach</div>
+            <div class="block">
+                Elektryk w liczbach
+            </div>
             <div class="block">
                 <img src="../images/logo_small.png" alt="Logo Szkoły">
             </div>
