--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -56,6 +56,10 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
+                <div class="contact facebook"></div>
+                <div class="contact instagram"></div>
+                <div class="contact mail"></div>
+                <div class="contact phone"></div>
             </div>
             <!-- Second card -->
             <div class="content">
