--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -56,7 +56,12 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
-                <div class="contact facebook"></div>
+                <div class="contact facebook">
+                    <div class="icon">
+
+                    </div>
+                    <div class="contactLink"></div>
+                </div>
                 <div class="contact instagram"></div>
                 <div class="contact mail"></div>
                 <div class="contact phone"></div>
