--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -62,9 +62,24 @@
                     </div>
                     <div class="contactLink"></div>
                 </div>
-                <div class="contact instagram"></div>
-                <div class="contact mail"></div>
-                <div class="contact phone"></div>
+                <div class="contact instagram">
+                    <div class="icon">
+
+                    </div>
+                    <div class="contactLink"></div>
+                </div>
+                <div class="contact mail">
+                    <div class="icon">
+
+                    </div>
+                    <div class="contactLink"></div>
+                </div>
+                <div class="contact phone">
+                    <div class="icon">
+
+                    </div>
+                    <div class="contactLink"></div>
+                </div>
             </div>
             <!-- Second card -->
             <div class="content">
