--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -57,10 +57,10 @@
                     <div class="span"></div>
                 </div>
                 <div class="contact facebook">
-                    <div class="icon">
+                    <div class="icon1">
 
                     </div>
-                    <div class="contactLink"></div>
+                    <div class="contactLink1"></div>
                 </div>
                 <div class="contact instagram">
                     <div class="icon">
