--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -57,28 +57,28 @@
                     <div class="span"></div>
                 </div>
                 <div class="contact facebook">
-                    <p class="text">Facebook</p>
+                    <div class="text">Facebook</div>
                     <div class="icon">
 
                     </div>
                     <div class="contactLink"></div>
                 </div>
                 <div class="contact instagram">
-                    <p class="text">Instagram</p>
+                    <div class="text">Instagram</div>
                     <div class="icon">
 
                     </div>
                     <div class="contactLink"></div>
                 </div>
                 <div class="contact mail">
-                    <p class="text">Mail</p>
+                    <div class="text">Mail</div>
                     <div class="icon">
 
                     </div>
                     <div class="contactLink"></div>
                 </div>
                 <div class="contact phone">
-                    <p class="text">Telefon</p>
+                    <div class="text">Telefon</div>
                     <div class="icon">
 
                     </div>
