--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -59,28 +59,28 @@
                 <div class="contact facebook">
                     <div class="text">Facebook</div>
                     <div class="icon">
-
+                        <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/></svg>
                     </div>
                     <div class="contactLink"></div>
                 </div>
                 <div class="contact instagram">
                     <div class="text">Instagram</div>
                     <div class="icon">
-
+                        <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3Z"/></svg>
                     </div>
                     <div class="contactLink"></div>
                 </div>
                 <div class="contact mail">
                     <div class="text">Mail</div>
                     <div class="icon">
-
+                        <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.413-.588T2 18V6q0-.825.588-1.413T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.588 1.413T20 20H4Zm8-7L4 8v10h16V8l-8 5Zm0-2l8-5H4l8 5ZM4 8V6v12V8Z"/></svg>
                     </div>
                     <div class="contactLink"></div>
                 </div>
                 <div class="contact phone">
                     <div class="text">Telefon</div>
                     <div class="icon">
-
+                        <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M17.3 9.375q-.3-.3-.3-.713t.3-.712l.9-.9h-4.15q-.425 0-.713-.287t-.287-.713q0-.425.288-.712t.712-.288h4.15l-.9-.9q-.3-.3-.287-.7t.287-.7q.3-.3.713-.313t.712.288L21.35 5.35q.15.15.213.325t.062.375q0 .2-.063.375t-.212.325L18.7 9.4q-.3.3-.7.288t-.7-.313ZM19.95 21q-3.225 0-6.287-1.438t-5.425-3.8q-2.363-2.362-3.8-5.425T3 4.05q0-.45.3-.75t.75-.3H8.1q.35 0 .625.225t.325.575l.65 3.5q.05.35-.013.638T9.4 8.45L7 10.9q1.05 1.8 2.625 3.375T13.1 17l2.35-2.35q.225-.225.588-.337t.712-.063l3.45.7q.35.075.575.338T21 15.9v4.05q0 .45-.3.75t-.75.3Z"/></svg>
                     </div>
                     <div class="contactLink"></div>
                 </div>
