--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -79,7 +79,9 @@
                     <div class="icon">
                         <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.413-.588T2 18V6q0-.825.588-1.413T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.588 1.413T20 20H4Zm8-7L4 8v10h16V8l-8 5Zm0-2l8-5H4l8 5ZM4 8V6v12V8Z"/></svg>
                     </div>
-                    <div class="contactLink"></div>
+                    <div class="contactLink">
+                        <a>sekretariat@ckziu-elektryk.pl</a>
+                    </div>
                 </div>
                 <div class="contact phone">
                     <div class="text">Telefon</div>
