--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -80,7 +80,7 @@
                         <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.413-.588T2 18V6q0-.825.588-1.413T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.588 1.413T20 20H4Zm8-7L4 8v10h16V8l-8 5Zm0-2l8-5H4l8 5ZM4 8V6v12V8Z"/></svg>
                     </div>
                     <div class="contactLink">
-                        <a class="copy">sekretariat<br>@ckziu-elektryk.pl</a>
+                        <a class="copyMail">sekretariat<br>@ckziu-elektryk.pl</a>
                     </div>
                 </div>
                 <div class="contact phone">
@@ -89,7 +89,7 @@
                         <svg width="90" height="90" viewBox="0 0 24 24"><path fill="currentColor" d="M17.3 9.375q-.3-.3-.3-.713t.3-.712l.9-.9h-4.15q-.425 0-.713-.287t-.287-.713q0-.425.288-.712t.712-.288h4.15l-.9-.9q-.3-.3-.287-.7t.287-.7q.3-.3.713-.313t.712.288L21.35 5.35q.15.15.213.325t.062.375q0 .2-.063.375t-.212.325L18.7 9.4q-.3.3-.7.288t-.7-.313ZM19.95 21q-3.225 0-6.287-1.438t-5.425-3.8q-2.363-2.362-3.8-5.425T3 4.05q0-.45.3-.75t.75-.3H8.1q.35 0 .625.225t.325.575l.65 3.5q.05.35-.013.638T9.4 8.45L7 10.9q1.05 1.8 2.625 3.375T13.1 17l2.35-2.35q.225-.225.588-.337t.712-.063l3.45.7q.35.075.575.338T21 15.9v4.05q0 .45-.3.75t-.75.3Z"/></svg>
                     </div>
                     <div class="contactLink">
-                        <a class="copy">68 475 55 55</a>
+                        <a class="copyPhone">68 475 55 55</a>
                     </div>
                 </div>
             </div>
