--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -82,7 +82,7 @@
                     <div class="contactLink">
                         <a class="copyMail">sekretariat<br>@ckziu-elektryk.pl</a>
                     </div>
-                    <div class="notification">Skopiowane!</div>
+                    <div class="notification notificationMail">Skopiowane!</div>
                 </div>
                 <div class="contact phone">
                     <div class="text">Telefon</div>
@@ -92,7 +92,7 @@
                     <div class="contactLink">
                         <a class="copyPhone">68 475 55 55</a>
                     </div>
-                    <div class="notification">Skopiowane!</div>
+                    <div class="notification notificationPhone">Skopiowane!</div>
                 </div>
             </div>
             <!-- Second card -->
