--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -31,8 +31,8 @@
     </header>
     <div class="blur"></div>
     <div class="loader"></div>
-    <div class="container">
-        <div class="container_cards">
+    <main class="container">
+        <section class="container_cards">
             <div class="block">
                 Kontakt
             </div>
@@ -48,8 +48,8 @@
             <div class="block">
                 <img src="../images/logo_small.png" alt="Logo Szkoły">
             </div>
-        </div>
-        <div class="content_cards">
+        </section>
+        <section class="content_cards">
             <!-- First card -->
             <div class="content">
                 <div class="close">
@@ -158,8 +158,8 @@
                 </div>
                 <img src="../images/logo_small.png" alt="">
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <footer>
         <p>Designed by <b>Ryżów Hubert</b> and <b>Ciesielski Filip</b></p>
     </footer>
