--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -102,7 +102,7 @@
                     <div class="span"></div>
                 </div>
                 <p>
-                    Historia naszej szkoły rozpoczyna się  15 października 1946 roku, 
+                    <b>Historia</b> naszej szkoły rozpoczyna się  15 października 1946 roku, 
                     kiedy to z polecenia Kuratorium Okręgu Szkolnego Wrocławskiego 
                     założona została Publiczna Dokształcająca Szkoła Zawodowa. 
                 </p>
