--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -149,6 +149,7 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
+                <div class="counter"></div>
             </div>
             <!-- Fifth card -->
             <div class="content">
