--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -42,7 +42,7 @@
             <div class="block">
                 Tradycja, postęp
             </div>
-            <div class="block">
+            <div class="block counterBlock">
                 Elektryk w liczbach
             </div>
             <div class="block">
