--- a/pages/o_nas.html
+++ b/pages/o_nas.html
@@ -149,7 +149,22 @@
                     <div class="span"></div>
                     <div class="span"></div>
                 </div>
-                <div class="counter"></div>
+                <div class="blockcounter">
+                    <p>Nauczycieli</p>
+                    <div class="counter1"></div>
+                </div>
+                <div class="blockcounter">
+                    <p>Uczniów</p>
+                    <div class="counter2"></div>
+                </div>
+                <div class="blockcounter">
+                    <p>Absolwentów</p>
+                    <div class="counter3"></div>
+                </div>
+                <div class="blockcounter">
+                    <p>Lat z nami</p>
+                    <div class="counter4"></div>
+                </div>
             </div>
             <!-- Fifth card -->
             <div class="content">
